# Scalable-Executable-Framework

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  NOTICE.md  README.md  ThirdParty_Install_Guide.md
Exec/: CMakeLists.txt  main.cpp
Exec/Common/: ByteArray.cpp  CMakeLists.txt  SafeQueue.cpp  UdmJsonRefMsg.cpp  UdmMessage.cpp  UdmMsg.cpp  UdmRequestQueue.cpp  UdmTimer.cpp  base.cpp  errorprinter.cpp
Exec/Common/include/: ByteArray.h  Mode.h  SafeQueue.h  TopicDefine.h  UdmJsonRefMsg.h  UdmMessage.h  UdmMsg.h  UdmRequestQueue.h  UdmTimer.h  base.h  errorprinter.h  hasp_api.h  hasp_api_cpp.h  internal.h  platform.h  platform.h.in
Exec/Config/: CMakeLists.txt  Config.cpp  Config.h  ConfigDefine.h
Exec/Element/: CMakeLists.txt  Element.cpp  Element.h  ElementFactory.cpp  ElementFactory.h  ElementWithConfig.cpp  ElementWithConfig.h  Group.cpp  Group.h  RequestQueueIntf.cpp  RequestQueueIntf.h
Exec/Elements/: CMakeLists.txt  ElementFactoryTest.cpp  ElementFactoryTest.h
Exec/Elements/Element1/: Element1.cpp  Element1.h
Exec/Exec/: BatchExec.cpp  BatchExec.h  CMakeLists.txt  CentralizationExec.cpp  CentralizationExec.h  DaemonExec.cpp  DaemonExec.h  DistributedExec.cpp  DistributedExec.h  Exec.cpp  Exec.h  InteractiveExec.cpp  InteractiveExec.h  LocalhostExec.cpp  LocalhostExec.h  MultiNodesExec.cpp  MultiNodesExec.h  NetworkExec.cpp  NetworkExec.h  OneShotExec.cpp  OneShotExec.h  OpenLibrary.cpp  OpenLibrary.h  ScheduledExec.cpp  ScheduledExec.h
Exec/Kernel/: CMakeLists.txt  Kernel.cpp  Kernel.h  KernelFactory.cpp  KernelFactory.h  KernelType.h
Exec/Kernel/LocalhostKernel/: BatchKernel.cpp  BatchKernel.h  BatchKernelFactory.cpp  BatchKernelFactory.h  DaemonKernel.cpp  DaemonKernel.h  DaemonKernelFactory.cpp  DaemonKernelFactory.h  InteractiveKernel.cpp  InteractiveKernel.h  InteractiveKernelFactory.cpp  InteractiveKernelFactory.h  LocalhostKernel.cpp  LocalhostKernel.h  OneShotKernel.cpp  OneShotKernel.h  OneShotKernelFactory.cpp  OneShotKernelFactory.h  ScheduledKernel.cpp  ScheduledKernel.h  ScheduledKernelFactory.cpp  ScheduledKernelFactory.h
Exec/Kernel/MultiNodesKernel/: CentralizationKernel.cpp  CentralizationKernel.h  CentralizationKernelFactory.cpp  CentralizationKernelFactory.h  DistributedKernel.cpp  DistributedKernel.h  DistributedKernelFactory.cpp  DistributedKernelFactory.h  MultiNodesKernel.cpp  MultiNodesKernel.h  NetworkKernel.cpp  NetworkKernel.h  NetworkKernelFactory.cpp  NetworkKernelFactory.h
Exec/SdkLibrary/: CMakeLists.txt  UdmSdk.cpp  UdmSdk.h
Exec/SerializeConfig/: CMakeLists.txt
Exec/SerializeConfig/Json/: JsonSerialization.cpp
Exec/SerializeConfig/include/: ConfigConvert.h  JsonSerialization.h  Serialization.h
Exec/SimTest/: CMakeLists1.txt
Exec/Udm/: CMakeLists.txt  Udm.cpp  Udm.h  UdmFactory.cpp  UdmFactory.h  UdmFactoryGenerator.cpp  UdmFactoryGenerator.h
Exec/Udm/Business/: UdmBusiness.cpp  UdmBusiness.h
Exec/Udm/IPCUdm/: IPCUdm.cpp  IPCUdm.h  MessageQueueUdm.cpp  MessageQueueUdm.h  MessageQueueUdmFactory.cpp  MessageQueueUdmFactory.h  SemaphoreUdm.cpp  SemaphoreUdm.h  SemaphoreUdmFactory.cpp  SemaphoreUdmFactory.h  SharedMemoryUdm.cpp  SharedMemoryUdm.h  SharedMemoryUdmFactory.cpp  SharedMemoryUdmFactory.h  SimpleSingletonUdm.cpp  SimpleSingletonUdm.h  SimpleSingletonUdmFactory.cpp  SimpleSingletonUdmFactory.h  ThreadSafetySingletonUdm.cpp  ThreadSafetySingletonUdm.h  ThreadSafetySingletonUdmFactory.cpp  ThreadSafetySingletonUdmFactory.h
Exec/Udm/NetUdm/: NetUdm.cpp  NetUdm.h  SocketAPIUdm.cpp  SocketAPIUdm.h  SocketAPIUdmFactory.cpp  SocketAPIUdmFactory.h  UdpSocketUdm.cpp  UdpSocketUdm.h  UdpSocketUdmFactory.cpp  UdpSocketUdmFactory.h  ZeroMQUdmEx.cpp  ZeroMQUdmEx.h  ZeroMQUdmFactory.cpp  ZeroMQUdmFactory.h
Exec/UdmBusService/: CMakeLists.txt  main.cpp
Exec/UdmMessage/: CMakeLists.txt  protoc_gen_example.txt  topicList.pb.cc  udmMessage.pb.cc
Exec/UdmMessage/include/: topicList.pb.h  udmMessage.pb.h
Exec/UdmService/: CMakeLists.txt  UdmService.cpp  UdmService.h  UdmServiceFactory.h
Exec/UdmService/udm/: UDMSerBusiness.cpp  UDMSerBusiness.h  UdpSocketService.cpp  UdpSocketService.h  UdpSocketServiceFactory.cpp  UdpSocketServiceFactory.h  ZeroMQServiceEx.cpp  ZeroMQServiceEx.h  ZeroMQServiceFactory.cpp  ZeroMQServiceFactory.h
Exec/log/: CMakeLists.txt  log.cpp  udmCLogger.cpp
Exec/log/include/: log.h  udmCLogger.h  udmLog.h
conf/: CMakeLists.txt  DBService.json  Exec.json  ExecDebug.json  ExecRelease.json  element1.json  element2.json
data/: CMakeLists.txt  protoc_gen_example.txt  topicList.pb.cc  udmMessage.pb.cc  udmMessage.proto
data/Proto Files/: topicList.proto
sys/ThirdParty.win/License/log4z/: LICENSE
sys/ThirdParty.win/include/google/protobuf/util/internal/testdata/: books.pb.h
sys/ThirdParty.win/include/libevent/event2/: event-config.h
sys/ThirdParty.win/include/lwip/: lwipBase.h  lwipUdp.h
sys/ThirdParty.win/include/pqxx/: LICENSE
sys/ThirdParty.win/lib/Release/c-logger/: logger.lib
sys/ThirdParty.win/lib/Release/google/protobuf/: libprotobuf-lite.lib
sys/ThirdParty.win/lib/Release/jsoncpp/: jsoncpp.exp
sys/ThirdParty.win/lib/Release/libevent/: event.lib  event_core.lib
sys/ThirdParty.win/lib/Release/libuv/: uv.lib
sys/ThirdParty.win/lib/Release/libzmq/: libzmq-v143-mt-4_3_5.lib
sys/ThirdParty.win/lib/Release/log4z/: log4z_win32d.lib
