cmake_minimum_required(VERSION 3.8)
set(CMAKE_CXX_STANDARD 17)
cmake_policy(SET CMP0091 NEW)

project(SEF)

option(DEBUG_MODE " debug type" OFF)
if(DEBUG_MODE)
	set(CMAKE_BUILD_TYPE "Debug")
else()
	set(CMAKE_BUILD_TYPE "Release")
	if(MSVC)
		#set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded")
		message("CMAKE_MSVC_RUNTIME_LIBRARY: ${CMAKE_MSVC_RUNTIME_LIBRARY}")
	endif()
endif()

set(VLD_PATH "" CACHE PATH "use vld to test memory")
if(NOT VLD_PATH STREQUAL "")
set(VLD_INCLUDE_PATH ${VLD_PATH}/include)
set(VLD_LIB_PATH ${VLD_PATH}/lib/Win64)
add_definitions(-DVLD_DEBUG)
message("vld enable: ${VLD_PATH}")
endif()

set(COMMON_DEBUG_LIBRARY_PATH   ${CMAKE_CURRENT_LIST_DIR}/sys/lib/Debug)
set(COMMON_RELEASE_LIBRARY_PATH   ${CMAKE_CURRENT_LIST_DIR}/sys/lib/Release)
set(COMMON_THIRD_DEBUG_LIBRARY_PATH   ${CMAKE_CURRENT_LIST_DIR}/sys/ThirdParty.win/lib/Debug)
set(COMMON_THIRD_RELEASE_LIBRARY_PATH   ${CMAKE_CURRENT_LIST_DIR}/sys/ThirdParty.win/lib/Release)
set(RELEASE_LIBRARY_PATH   ${COMMON_RELEASE_LIBRARY_PATH} ${COMMON_THIRD_RELEASE_LIBRARY_PATH})
set(DEBUG_LIBRARY_PATH   ${COMMON_DEBUG_LIBRARY_PATH} ${COMMON_THIRD_DEBUG_LIBRARY_PATH})


message("CMAKE_CONFIGURATION_TYPES:${CMAKE_CONFIGURATION_TYPES}")
message("CMAKE_CURRENT_SOURCE_DIR path ${CMAKE_CURRENT_SOURCE_DIR}}")

set(CMAKE_CONFIGURATION_TYPES ${CMAKE_BUILD_TYPE})
option(USE_BIGENDIAN " Target system is big endian" ON)
if(USE_BIGENDIAN)
	set(BYTE_ENDIAN "#define BIG_ENDIAN")
else()
	set(BYTE_ENDIAN "#define LITTLE_ENDIAN")
endif()

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "CLang")
    add_definitions(-DAF_CLASSARRANGE_EXPORTS)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wl,-Bsymbolic")
    set(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb")
    set(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -g -O2 -Wall")
    add_compile_options(-Wall -Wextra -Wpedantic -fPIC -fvisibility=hidden)
    add_definitions(-D_GLIBCXX_USE_CXX11_ABI=0)
else()
    add_definitions(-D_CRT_SECURE_NO_WARNINGS -DAF_CLASSARRANGE_EXPORTS)
#    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /utf-8")
    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /Zi /Od")
    set(CMAKE_EXE_LINKER_FLAGS_RELEASE "${CMAKE_EXE_LINKER_FLAGS_RELEASE} /DEBUG:FULL /OPT:REF /OPT:ICF")
    set(CMAKE_SHARED_LINKER_FLAGS_RELEASE "${CMAKE_SHAREd_LINKER_FLAGS_RELEASE} /DEBUG:FULL /OPT:REF /OPT:ICF")
endif()


configure_file("${CMAKE_CURRENT_SOURCE_DIR}/Exec/Common/include/platform.h.in" "${CMAKE_CURRENT_SOURCE_DIR}/Exec/Common/include/platform.h")
# conf & data copy to sys
add_subdirectory(conf)
add_subdirectory(Exec/log)
add_subdirectory(Exec/SerializeConfig)
add_subdirectory(Exec/UdmMessage)
add_subdirectory(Exec/Common)
add_subdirectory(Exec/config)
add_subdirectory(Exec/element)
add_subdirectory(Exec/udm)
add_subdirectory(Exec/udmService)
add_subdirectory(Exec/kernel)
add_subdirectory(Exec/Exec)
add_subdirectory(Exec/elements)
add_subdirectory(data)
add_subdirectory(Exec)

#add_subdirectory(bin)